- 커스텀 에러 - 저장, 수정, 대여 가능 여부, 차량 검색 API - 테스트 코드 작성 - 테스트 데이터 insert - Swagger 설정